This file lists all changes made to the game driver in all gory detail.
See the file HISTORY for a user-oriented summary of all the changes.

08-Oct-2002 (Lars Duening)  (3.3.278)
  - (configure) Forgot to regenerate it.
  - (lex.c, prolang) Implemented #'inh::fun lfun closures (b-010801-0).

07-Oct-2002 (Lars Duening)  (3.3.277)
  - (comm.c, main.c, efuns.c) Removed compilation problems with BeOS.
  - (prolang.y) In struct literals, a trailing ',' is now allowed
       (suggested by Zonk).
  - (prolang.y) Oh My Ghod. The range index [..<expr0>] created faulty
       bytecode, maybe even clobbered random memory, if the expression
       was anything complicated, like 'm++' or 'm = 4'. This bug
       was caused by uninitialized the LPC parser not initializing
       the internal return value from parsing <expr0>, so the bug
       didn't manifest itself every time (reported by Zonk).

06-Oct-2002 (Lars Duening)  (3.3.276)
  - (prolang.y, interpret.c, efuns.c, sprintf.c, gcollect.c, exec.h)
       structs now carry an identification string internally, which is
       displayed in sprintf() and can be retrieved using get_type_info().

06-Oct-2002 (Lars Duening)  (3.3.275)
  - (prolang.y) New inlines: found a way to implement the old (: expr; :)
       form, and corrected an error where the type of context variables
       wasn't copied properly, but instead a random value was used.
  - (interpret.c) The sanity check for proper stack usage was still
       incompatible with the new multibyte efun instructions (reported
       by Dafire).
  - (prolang.y) Structure IDs are now counted up from 1 instead of 0,
       so that efun argument type errors can print id #0 as "just struct"
       (reported by Dafire).
  - (prolang.y) Straightened out the functions for function generation to
       reduce duplicated code.

06-Oct-2002 (Lars Duening)  (3.3.274)
  - (prolang.y) New inlines: Improved the error handling for the (::) form: