@@ -20,12 +20,12 @@
 ;; TODO: The regexp() functions and sscanf() should be able to handle '\0' as
 ;; TODO:: data byte, not as terminator.
               
-(Project-Version lpmud 3-3 278)
-(Parent-Version lpmud 3-3 277)
-(Version-Log "Implemented #'inh::fun lfun closures.")
+(Project-Version lpmud 3-3 279)
+(Parent-Version lpmud 3-3 278)
+(Version-Log "Forgot to remove a debug output.")
 (New-Version-Log
 "")
-(Checkin-Time "Tue, 08 Oct 2002 00:41:04 -0600")
+(Checkin-Time "Tue, 08 Oct 2002 01:09:58 -0600")
 (Checkin-Login lars)
 (Populate-Ignore ("~$" "\\.o$" "core$" "\\.emacs" "\\.a$" "\\.deps"
                   "\\.gz$" "\\.orig$" "\\.rej$" "\\.xSYM" "^driver$"
@@ -61,7 +61,7 @@
   (README (lpmud/n/0_README 1.4.1.1 644))
   (COPYRIGHT (lpmud/d/20_Copyright 1.10.1.8 644))
   (CREDITS (lpmud/d/22_CREDITS 1.70.1.48 644))
-  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.341 644))
+  (CHANGELOG (lpmud/e/38_CHANGELOG. 1.157.1.342 644))
   (HISTORY (lpmud/f/49_HISTORY 1.278 644))
   (INSTALL (lpmud/d/18_INSTALL 1.11.1.17 644))
   (COPYING.LIB (lpmud/k/14_COPYING.LI 1.2 644))
@@ -216,7 +216,7 @@
   (src/port.h (lpmud/38_port.h 1.30.1.4.1.12 644))
   (src/port.c (lpmud/39_port.c 1.17.1.7 644))
   (src/prolang.h (lpmud/f/19_prolang.h 1.16 644))
-  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.58 644))
+  (src/prolang.y (lpmud/37_prolang.y 1.65.1.84.1.59 644))
   (src/ptrtable.h (lpmud/m/26_ptrtable.h 1.4 644))
   (src/ptrtable.c (lpmud/m/27_ptrtable.c 1.7.1.1 644))
   (src/random.h (lpmud/f/18_random.h 1.3 644))
